--- a/p_shouhou/shouhou_list.html
+++ b/p_shouhou/shouhou_list.html
@@ -136,7 +136,7 @@
 			var logmax = $("#logmax").val();
 			var eventType = $("#eventType").val();
 			var shopType=$("#shopType").val();
-			$.ajax({url:"/shouhouapi/shouhouList/list?pageNum=1&pageSize=10",data:{"shop":shopType,"dealStatus":prostatus,"orderNo":orderno,"transNo":transno,"miss":misstatus,"eventType":eventType,},success:function(result){
+			$.ajax({url:"/shouhouapi/shouhouList/list?pageNum="+pageIndex+"&pageSize=10",data:{"shop":shopType,"dealStatus":prostatus,"orderNo":orderno,"transNo":transno,"miss":misstatus,"eventType":eventType,},success:function(result){
 				//var result="{\"code\":200,\"message\":\"success\",\"data\":{\"pageNum\":1,\"pageSize\":10,\"size\":1,\"startRow\":1,\"endRow\":1,\"total\":1,\"pages\":1,\"list\":[{\"id\":\"1\",\"ids\":null,\"sortColumns\":null,\"shop\":\"tm-lqy\",\"shops\":null,\"createTime\":\"2018-11-13 20:58:32\",\"createTimeGte\":null,\"createTimeLte\":null,\"updateTime\":\"2018-11-13 20:58:35\",\"updateTimeGte\":null,\"updateTimeLte\":null,\"createBy\":\"1\",\"updateBy\":\"1\",\"orderNo\":\"11111\",\"orderNoLike\":null,\"cusName\":\"1212\",\"transNo\":\"123123123\",\"fee\":10.00,\"reason\":\"123123123\",\"eventType\":\"123\",\"dealStatus\":1,\"dealRemark\":\"123123123\",\"miss\":1,\"orderFee\":65.26}],\"prePage\":0,\"nextPage\":0,\"isFirstPage\":true,\"isLastPage\":true,\"hasPreviousPage\":false,\"hasNextPage\":false,\"navigatePages\":8,\"navigatepageNums\":[1],\"navigateFirstPage\":1,\"navigateLastPage\":1,\"firstPage\":1,\"lastPage\":1}}";
 				//var res = JSON.parse(result);
 				var res = result;
