--- a/p_shouhou/shouhou_list.html
+++ b/p_shouhou/shouhou_list.html
@@ -22,7 +22,15 @@
 	<script type="text/javascript" src="../lib/datatables/1.10.0/jquery.dataTables.min.js"></script> 
 	<script type="text/javascript" src="../lib/laypage/1.2/laypage.js"></script>
 	<script type="text/javascript" src="../static/initdata.js"></script>
-
+	<style>
+		.cusinfo{
+			width:260px;
+			word-break:keep-all;
+			white-space:nowrap;
+			overflow:hidden;
+			text-overflow:ellipsis;
+		}
+	</style>
 </head>
 <body>
     <div>售后问题列表<div>
@@ -75,17 +83,19 @@
 				<tr class="text-c">
 					<!--<th width="25"><input type="checkbox" name="" value=""></th>-->
 					<th width="80">店铺</th>
-					<th width="120">订单号/旺旺</th>
-					<th width="80">客户姓名</th>
-					<th width="80">快递单号</th>
+					<th width="160">订单号/旺旺</th>
+					<th width="60">客户姓名</th>
+					<th width="100">快递单号</th>
 					<th width="60">事件类型</th>
+					<th width="120">创建时间</th>
 					<!--<th width="75">原因</th>-->
 					<!--<th width="60">金额</th>-->
-					<th width="60">处理状态</th>
-					<!--<th width="120">处理备注</th>-->
+					<th width="60">处理状态</th>					
 					<th width="60">是否丢件</th>
 					<!--<th width="120">订单金额</th>-->
-					<th width="120">操作</th>
+					<th width="60">处理备注</th>
+					<th width="80">操作</th>
+					
 				</tr>
 			</thead>
 			<tbody id="restable">
@@ -170,14 +180,15 @@
 											"<td>"+trdata.cusName+"</td>"+
 											"<td>"+trdata.transNo+"</td>"+
 											"<td>"+shouhouTypeMap["et_"+trdata.eventType]+"</td>"+
+											"<td>"+trdata.createTime+"</td>"+
 											//"<td>"+trdata.reason+"</td>"+
 											//"<td>"+trdata.fee+"</td>"+
-											"<td class=\"td-status\" style=\""+delstatuscolor+"\">"+delstatusdec+"</td>"+
-											//"<td>"+trdata.dealRemark+"</td>"+
+											"<td class=\"td-status\" style=\""+delstatuscolor+"\">"+delstatusdec+"</td>"+											
 											"<td>"+missdec+"</td>"+
 											//"<td>"+trdata.orderFee+"</td>"+
-											"<td class=\"f-14 td-manage\"><a href = \"javascript:;\" onclick=\"toshouhoupopwindow('shouhou_detail.html?id="+trdata.id+"')\" >查看</>&nbsp;&nbsp;<a href = \"javascript:;\" onclick=\"toshouhoupopwindow('shouhou_update.html?id="+trdata.id+"')\">修改</a>"
-									  "</tr>";
+											"<td><div class=\"cusinfo\">"+trdata.dealRemark+"</div></td>"+
+											"<td class=\"f-14 td-manage\"><a href = \"javascript:;\" onclick=\"toshouhoupopwindow('shouhou_detail.html?id="+trdata.id+"')\" >查看</>&nbsp;&nbsp;<a href = \"javascript:;\" onclick=\"toshouhoupopwindow('shouhou_update.html?id="+trdata.id+"')\">修改</a>"+											
+											"</tr>";
 						tablehtml = tablehtml + trhtml;						
 					}
 					$("#restable").html(tablehtml);
