--- a/p_bufa/bufa_add.html
+++ b/p_bufa/bufa_add.html
@@ -70,7 +70,7 @@
 		<div style="height:10px"></div>
 		<div class="text-c">
 			<span>是否邮政：</span>
-			<span> <input type="radio" name="ems" value="2" checked />发申通&nbsp;&nbsp;<input type="radio" name="ems" value="1" />发邮政</span>
+			<span> <input type="radio" name="ems" value="2" checked />其他快递&nbsp;&nbsp;<input type="radio" name="ems" value="1" />发邮政</span>
 		</div>		
 		<div style="height:10px"></div>
 		<div class="text-c">
