--- a/menu.html
+++ b/menu.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><span style="font-weight: bold;">操作菜单</span></div>
-	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_shouhou/shouhou_list.html" style="text-decoration:none" target="contentf">售后处理列表</a></div>
-	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_bufa/bufa_list.html" style="text-decoration:none" target="contentf">补发列表</a></div>
-	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_user/mima_update.html" style="text-decoration:none" target="contentf">修改密码</a></div>
-	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_user/user_list.html" style="text-decoration:none" target="contentf">用户管理</a></div>
+	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_shouhou/shouhou_list.html??" style="text-decoration:none" target="contentf">售后处理列表</a></div>
+	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_bufa/bufa_list.html??" style="text-decoration:none" target="contentf">补发列表</a></div>
+	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_user/mima_update.html??" style="text-decoration:none" target="contentf">修改密码</a></div>
+	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_user/user_list.html??" style="text-decoration:none" target="contentf">用户管理</a></div>
 </body>
 </html>
