--- a/menu.html
+++ b/menu.html
@@ -14,5 +14,6 @@
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_user/mima_update.html??" style="text-decoration:none" target="contentf">修改密码</a></div>
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_user/user_list.html??" style="text-decoration:none" target="contentf">用户管理</a></div>
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="quicklink.html??" style="text-decoration:none" target="contentf">拼多多店铺入口</a></div>
+	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_quehuo/quehuo_list.html??" style="text-decoration:none" target="contentf">缺货查询</a></div>
 	</body>
 </html>
