--- a/menu.html
+++ b/menu.html
@@ -15,5 +15,6 @@
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_user/user_list.html??" style="text-decoration:none" target="contentf">用户管理</a></div>
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="quicklink.html??" style="text-decoration:none" target="contentf">拼多多店铺入口</a></div>
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_quehuo/quehuo_list.html??" style="text-decoration:none" target="contentf">缺货查询</a></div>
+	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="filedownload.html??" style="text-decoration:none" target="contentf">文件下载</a></div>
 	</body>
 </html>
