--- a/menu.html
+++ b/menu.html
@@ -16,5 +16,6 @@
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="quicklink.html??" style="text-decoration:none" target="contentf">拼多多店铺入口</a></div>
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="p_quehuo/quehuo_list.html??" style="text-decoration:none" target="contentf">缺货查询</a></div>
 	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="filedownload.html??" style="text-decoration:none" target="contentf">文件下载</a></div>
+	<div style="padding:8px;border:1px solid #96c2f1;background:#eff7ff;text-align:center"><a href="/p_analysis/analysis_product/product_list.html??" style="text-decoration:none" target="contentf">产品成交词分析</a></div>
 	</body>
 </html>
