--- a/p_analysis/analysis_words/words_data_list.html
+++ b/p_analysis/analysis_words/words_data_list.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>后台</title>
-	<link rel="stylesheet" type="text/css" href="../static/h-ui/css/H-ui.min.css" />
-	<link rel="stylesheet" type="text/css" href="../static/h-ui.admin/css/H-ui.admin.css" />
-	<link rel="stylesheet" type="text/css" href="../lib/Hui-iconfont/1.0.8/iconfont.css" />
-	<link rel="stylesheet" type="text/css" href="../static/h-ui.admin/skin/default/skin.css" id="skin" />
-	<link rel="stylesheet" type="text/css" href="../static/h-ui.admin/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="/static/h-ui/css/H-ui.min.css" />
+	<link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/H-ui.admin.css" />
+	<link rel="stylesheet" type="text/css" href="/lib/Hui-iconfont/1.0.8/iconfont.css" />
+	<link rel="stylesheet" type="text/css" href="/static/h-ui.admin/skin/default/skin.css" id="skin" />
+	<link rel="stylesheet" type="text/css" href="/static/h-ui.admin/css/style.css" />
 
-	<script type="text/javascript" src="../lib/jquery/1.9.1/jquery.min.js"></script> 
-	<script type="text/javascript" src="../lib/layer/2.4/layer.js"></script>
-	<script type="text/javascript" src="../static/h-ui/js/H-ui.min.js"></script> 
-	<script type="text/javascript" src="../static/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
+	<script type="text/javascript" src="/lib/jquery/1.9.1/jquery.min.js"></script> 
+	<script type="text/javascript" src="/lib/layer/2.4/layer.js"></script>
+	<script type="text/javascript" src="/static/h-ui/js/H-ui.min.js"></script> 
+	<script type="text/javascript" src="/static/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
 
 	<!--请在下方写此页面业务相关的脚本-->
-	<script type="text/javascript" src="../lib/My97DatePicker/4.8/WdatePicker.js"></script> 
-	<script type="text/javascript" src="../lib/datatables/1.10.0/jquery.dataTables.min.js"></script> 
-	<script type="text/javascript" src="../lib/laypage/1.2/laypage.js"></script>
-	<script type="text/javascript" src="../static/initdata.js"></script>
+	<script type="text/javascript" src="/lib/My97DatePicker/4.8/WdatePicker.js"></script> 
+	<script type="text/javascript" src="/lib/datatables/1.10.0/jquery.dataTables.min.js"></script> 
+	<script type="text/javascript" src="/lib/laypage/1.2/laypage.js"></script>
+	<script type="text/javascript" src="/static/initdata.js"></script>
 	<style>
 		.cusinfo{
 			width:260px;
@@ -57,9 +57,10 @@
 				<tr class="text-c">
 					<!--<th width="25"><input type="checkbox" name="" value=""></th>-->
 					<th width="160">关键词</th>
-					<th width="60">总访客数</th>
-					<th width="60">总支付买家数</th>
-					<th width="60">平均转化率</th>
+					<th width="60">访客数</th>
+					<th width="60">支付买家数</th>
+					<th width="60">转化率</th>
+					<th width="60">日期</th>
 					<th width="80">操作</th>
 					
 				</tr>
@@ -126,6 +127,7 @@
 											"<td>"+trdata.peopleCounts+"</td>"+
 											"<td>"+trdata.payCounts+"</td>"+
 											"<td>"+trdata.cr+"</td>"+	
+											"<td>"+trdata.createTime+"</td>"+
 											"<td class=\"f-14 td-manage\"><a href = \"javascript:;\" onclick=\"todeldata('"+trdata.id+"','"+trdata.productId+"')\" >删除</>"+											
 											"</tr>";
 						tablehtml = tablehtml + trhtml;						
@@ -166,7 +168,7 @@
 				var res = result;
 				if(res.code==200 || res.code=='200') {
 					alert("success！");
-					window.location.href="/p_analysis/analysis_words/words_list?productId="+productId;
+					window.location.href="/p_analysis/analysis_words/words_list.html?productId="+productId;
 				}
 			}});
 			}
