--- a/p_analysis/analysis_words/words_list.html
+++ b/p_analysis/analysis_words/words_list.html
@@ -40,12 +40,12 @@
 		 关键词：<input type="text" name="wordsNameLike" id="wordsNameLike" style="width:250px" class="input-text">
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		创建日期：
-			<input type="text" onfocus="WdatePicker({ maxDate:'#F{$dp.$D(\'logmax\')||\'%y-%M-%d\'}' })" id="begindate" name="begindate" class="input-text Wdate" style="width:120px;">
+			<input type="text" onclick="WdatePicker()" id="begindate" name="begindate" class="input-text Wdate" style="width:120px;">
 			-
-			<input type="text" onfocus="WdatePicker({ minDate:'#F{$dp.$D(\'logmin\')}',maxDate:'%y-%M-%d' })" id="enddate" name="enddate" class="input-text Wdate" style="width:120px;">
+			<input type="text" onclick="WdatePicker()" id="enddate" name="enddate" class="input-text Wdate" style="width:120px;">
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			
-		</div>-->
+		</div>
 		 
 		 
 		</div>
@@ -115,7 +115,7 @@
 			var wordsNameLike = $("#wordsNameLike").val();
 			var createTimeGte = $("#begindate").val();
 			var createTimeLte = $("#enddate").val();
-			$.ajax({url:"/shouhouapi/analysisWords/calculateList?pageNum="+pageIndex+"&pageSize=10",data:{"productId":productId,"wordsNameLike":wordsNameLike,"createTimeGte":createTimeGte,"createTimeLte":createTimeLte},success:function(result){
+			$.ajax({url:"/shouhouapi/analysisWords/calculateList?pageNum="+pageIndex+"&pageSize=10",data:{"productId":productId,"wordsNameLike":wordsNameLike,"begin":createTimeGte,"end":createTimeLte},success:function(result){
 				//var result="{\"code\":200,\"message\":\"success\",\"data\":{\"pageNum\":1,\"pageSize\":10,\"size\":1,\"startRow\":1,\"endRow\":1,\"total\":1,\"pages\":1,\"list\":[{\"id\":\"1\",\"ids\":null,\"sortColumns\":null,\"shop\":\"tm-lqy\",\"shops\":null,\"createTime\":\"2018-11-13 20:58:32\",\"createTimeGte\":null,\"createTimeLte\":null,\"updateTime\":\"2018-11-13 20:58:35\",\"updateTimeGte\":null,\"updateTimeLte\":null,\"createBy\":\"1\",\"updateBy\":\"1\",\"orderNo\":\"11111\",\"orderNoLike\":null,\"cusName\":\"1212\",\"transNo\":\"123123123\",\"fee\":10.00,\"reason\":\"123123123\",\"eventType\":\"123\",\"dealStatus\":1,\"dealRemark\":\"123123123\",\"miss\":1,\"orderFee\":65.26}],\"prePage\":0,\"nextPage\":0,\"isFirstPage\":true,\"isLastPage\":true,\"hasPreviousPage\":false,\"hasNextPage\":false,\"navigatePages\":8,\"navigatepageNums\":[1],\"navigateFirstPage\":1,\"navigateLastPage\":1,\"firstPage\":1,\"lastPage\":1}}";
 				//var res = JSON.parse(result);
 				var res = result;
