--- a/p_quehuo/quehuo_kf_list.html
+++ b/p_quehuo/quehuo_kf_list.html
@@ -40,7 +40,7 @@
 		 <span> erp订单编号：</span>
 		 <input type="text" name="erpOrderId" id="erpOrderId" style="width:250px" class="input-text">
 		 <span> 状态：</span>
-		  <input type="radio" name="prostatus" value="0"  />客服待确定
+		  <input type="radio" name="prostatus" value="0" checked />客服待确定
 		 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;	 
 		 <button name="" id="" class="btn btn-success" onclick="queryData()"><i class="Hui-iconfont">&#xe665;</i> 查询</button>
 		</div>
@@ -153,7 +153,7 @@
 				if(res.code==200 || res.code=='200') {
 					alert("success！");
 					window.location.href="quehuo_kf_list.html";
-				}
+				}}});
 		}
 	
 		function todeldata(id) {
