--- a/p_quehuo/quehuo_ckbz_update.html
+++ b/p_quehuo/quehuo_ckbz_update.html
@@ -57,12 +57,17 @@
 	<div class="page-container">		
 		<div class="text-c">
 			<span>erp订单编号：</span>
-			<span><input type="text" name="orderId" id="orderId" style="width:250px" class="input-text"></span>
+			<span id="orderId"></span>
 		</div>	
 		<div style="height:10px"></div>
 		<div class="text-c">
 			<span>仓库备注：</span>
 			<span><input type="text" name="ckRemark" id="ckRemark" style="width:250px" class="input-text"></span>
+		</div>	
+		<div style="height:10px"></div>
+		<div class="text-c">
+			<span>创建时间：</span>
+			<span id="createtime"></span>
 		</div>	
 		<div style="height:10px"></div>
 		<div class="text-c">
@@ -83,9 +88,9 @@
 			//var res = JSON.parse(result);
 			var res = result;
 			if(res.data) {	
-				$("#orderId").val(res.data.orderId);
-				$("#orderId").attr("readonly",true);
+				$("#orderId").text(res.data.orderId);
 				$("#ckRemark").val(res.data.ckRemark);
+				$("#createtime").text(res.data.createTime);
 			}else {
 			}
 	
