--- a/p_quehuo/quehuo_ck_list.html
+++ b/p_quehuo/quehuo_ck_list.html
@@ -122,7 +122,7 @@
 						if (trdata.handleStatus==0) {
 							editstr = "<a href = \"javascript:;\" onclick=\"toshouhoupopwindow('quehuo_ck_update.html?id="+trdata.id+"')\">修改</a>&nbsp;<a href = \"javascript:;\" onclick=\"todeldata('"+trdata.id+"')\">删除</a>";							
 						}else if (trdata.handleStatus==1) {
-							editstr = "<a href = \"javascript:;\" onclick=\"toshouhoupopwindow('quehuo_ckbz_update.html?id="+trdata.id+"')\">修改</a>&nbsp;<a href = \"javascript:;\" onclick=\"findished('"+trdata.id+"')\">发货</a>";
+							editstr = "<a href = \"javascript:;\" onclick=\"toshouhoupopwindow('quehuo_ckbz_update.html?id="+trdata.id+"')\">修改</a>&nbsp;<a href = \"javascript:;\" onclick=\"findished('"+trdata.id+"')\">结单</a>";
 						}
 						var trhtml = "<tr class=\"text-c\">" +
 											"<td>"+trdata.orderId+"</td>" +
