--- a/p_cost/cost_upload_check.html
+++ b/p_cost/cost_upload_check.html
@@ -55,7 +55,7 @@
     <div style="text-align:center;font-size:20px;color:red">上传文件</div>
 	
 	<div class="page-container">		
-		<form method="post" action="/shouhouapi/shouhouProductCost/uploadcosts" enctype="multipart/form-data">
+		<form method="post" action="http://localhost:9000/shouhouProductCost/uploadcheck" enctype="multipart/form-data">
 		  <input type="file" name="file">
 		  <input type="submit">
 		</form>
